--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,12 +11,14 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "dialog-message", "shell-open"] }
+tauri = { version = "1.7.1", features = [ "dialog-message", "shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 chrono = "0.4.38"
 rand = "0.8.5"
 once_cell = "1.19.0"
+dirs = "5.0.1"
+
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
