--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -8,16 +8,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1", features = [] }
+tauri-build = { version = "2.0.1", features = [] }
 
 [dependencies]
-tauri = { version = "1.7.1", features = [ "dialog-message", "shell-open"] }
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+tauri = { version = "2.0.2", features = [] }
+tauri-cli = "2.0.2"
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.128"
 chrono = "0.4.38"
 rand = "0.8.5"
-once_cell = "1.19.0"
+once_cell = "1.20.2"
 dirs = "5.0.1"
+tauri-plugin-dialog = "2"
 
 
 [features]
